匹配exp后面的位置   ？非贪心

--- a/Day01-15/12.字符串和正则表达式.md
+++ b/Day01-15/12.字符串和正则表达式.md
@@ -34,11 +34,11 @@
 | (exp)              | 匹配exp并捕获到自动命名的组中             |                  |                                                    |
 | (?&lt;name&gt;exp) | 匹配exp并捕获到名为name的组中             |                  |                                                    |
 | (?:exp)            | 匹配exp但是不捕获匹配的文本               |                  |                                                    |
-| (?=exp)            | 匹配exp前面的位置                         | \\b\\w+(?=ing)     | 可以匹配I'm dancing中的danc                        |
-| (?<=exp)           | 匹配exp后面的位置                         | (?<=\\bdanc)\\w+\\b | 可以匹配I love dancing and reading中的第一个ing    |
-| (?!exp)            | 匹配后面不是exp的位置                     |                  |                                                    |
-| (?<!exp)           | 匹配前面不是exp的位置                     |                  |                                                    |
-| *?                 | 重复任意次，但尽可能少重复 | a.\*b<br>a.\*?b | 将正则表达式应用于aabab，前者会匹配整个字符串aabab，后者会匹配aab和ab两个字符串 |
+| <font color=red>(?=exp)</font> | 匹配exp前面的位置                         | \\b\\w+(?=ing)     | 可以匹配I'm dancing中的danc                        |
+| <font color=red>(?<=exp)</font> | 匹配exp<font color=red>后</font>面的位置 | (?<=<font color=red>\\bdanc</font>)\\w+\\b | 匹配I love dancing and reading中的第一个ing  (?<=)->匹配正则后 \b->空格 danc->danc \w+ -> 多个字母/数字/下划线 |
+| <font color=red>(?!exp)</font> | 匹配后面不是exp的位置                     |                  |                                                    |
+| <font color=red>(?<!exp)</font> | 匹配前面不是exp的位置                     |                  |                                                    |
+| *?  <font color=red>?非贪心</font> | 重复任意次，但尽可能少重复 | a.\*b<br>a.\*?b | 将正则表达式应用于aabab，前者会匹配整个字符串aabab，后者会匹配aab和ab两个字符串 |
 | +?                 | 重复1次或多次，但尽可能少重复 |                  |                                                    |
 | ??                 | 重复0次或1次，但尽可能少重复 |                  |                                                    |
 | {M,N}?             | 重复M到N次，但尽可能少重复 |                  |                                                    |
@@ -98,8 +98,9 @@ if __name__ == '__main__':
     main()
 ```
 
-> **提示：** 上面在书写正则表达式时使用了<font color=red>“原始字符串”的写法（在字符串前面加上了r）</font>，所谓“原始字符串”就是字符串中的每个字符都是它原始的意义，说得更直接一点就是字符串中没有所谓的转义字符啦。因为正则表达式中有很多元字符和需要进行转义的地方，如果不使用原始字符串就需要将反斜杠写作\\\\，例如表示数字的\\d得书写成\\\\d，这样不仅写起来不方便，阅读的时候也会很吃力。
+> **提示：** 上面在书写正则表达式时使用了<font color=red>“原始字符串”的写法（在字符串前面加上了r）</font>，所谓“原始字符串”就是字符串中的每个字符都是它原始的意义，说得更直接一点就是<font color=red>字符串中没有所谓的转义字符</font>啦。因为正则表达式中有很多元字符和需要进行转义的地方，如果不使用原始字符串就需要将反斜杠写作\\\\，例如表示数字的\\d得书写成\\\\d，这样不仅写起来不方便，阅读的时候也会很吃力。
 
+> \d	匹配数字
 #### 例子2：从一段文字中提取出国内手机号码。
 
 下面这张图是截止到2017年底，国内三家运营商推出的手机号段。
